--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.2.0"
 edition = "2021"
 
 [dependencies]
+bitfield-struct = "0.10.1"
 itertools = "0.13.0"
 
 [package.metadata.docs.rs]
