--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "3"
 members = [
-    "jt1701", "septivigntimal", "ternary", 
+    "JIMNIAC", "septivigntimal", "ternary", 
 ]
 
 [workspace.dependencies]
