--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "3"
 members = [
-    "JIMNIAC", "septivigntimal", "ternary", 
+    "JIMNIAC", "septivigntimal", "ternary", "terscii", "testing",
 ]
 
 [workspace.dependencies]
