--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+ternary = { path = "../ternary" }
+septivigntimal = { path = "../septivigntimal" }
 termion = "4.0.3"
