--- a/ternary/Cargo.toml
+++ b/ternary/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [features]
+default = ["packed"]
 const_size = []
+packed = []
 
 [dependencies]
+packed_struct = "0.10.1"
