--- a/ternary/Cargo.toml
+++ b/ternary/Cargo.toml
@@ -4,9 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [features]
-default = ["packed"]
+default = []
 const_size = []
-packed = []
 
 [dependencies]
-packed_struct = "0.10.1"
