--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,6 @@
 [build]
-rustflags = ["-Zpolonius", "-C", "link-arg=-fuse-ld=mold"]
+# rustflags = ["-Zpolonius"]
+# rustflags = ["-Zpolonius", "-C", "link-arg=-fuse-ld=mold"]
 target-dir = ".target"
 
 [unstable]
