--- a/JX_01/Cargo.toml
+++ b/JX_01/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2024"
 [dependencies]
 ternary = { path = "../ternary" }
 septivigntimal = { path = "../septivigntimal" }
+sdl3 = "0.16.1"
